# qa_guru_hw20

./: .gitignore  README.md  helper.py  pyproject.toml  pytest.ini  test_recres_api_validation.py
schemas/: get_list_resource.json  get_single_resource.json  patch_update_user_validation.json  post_create_user.json
