[tool.poetry]
name = "qa-guru-hw20"
version = "0.1.0"
description = ""
authors = ["Alexey Telnov <signacher@mail.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_hw20"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
requests = "^2.31.0"
allure-pytest = "^2.13.2"
jsonschema = "^4.18.0"
curlify = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
